[in-fill] Avoid tessellation by counting number of edge crossing to -∞
Benjamin Otte reports that in one particular benchmark cairo_in_fill() is
a hotspot in the profile. Currently we tessellate the entire path and then
search for a containing trapezoid. This is very expensive compared to the
simple method of counting the number of edge crossing between the point of
interest and x=-∞. For example, this speeds tessellate-256 up by almost 3
orders of magnitude.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -122,6 +122,7 @@ cairo_sources = \
 	cairo-path.c \
 	cairo-path-fill.c \
 	cairo-path-fixed.c \
+	cairo-path-in-fill.c \
 	cairo-path-stroke.c \
 	cairo-pattern.c \
 	cairo-pen.c \
