[trace] Trace mark-dirty
Capture the image data on mark dirty and record in the trace.

--- a/util/cairo-trace/cairo-trace.in
+++ b/util/cairo-trace/cairo-trace.in
@@ -55,7 +55,7 @@ fi
 
 filename=""
 if test -z "$nofile"; then
-  filename=`basename $1`.$$.trace
+  filename=`basename -- $1`.$$.trace
 fi
 
 LD_PRELOAD=@libdir@/cairo/cairo-trace.so 
