[skiplist] Inline testing.
Add a loop to create a skip list to allow manual checking.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -84,8 +84,11 @@ TESTS += check-link$(EXEEXT)
 endif
 
 EXTRA_DIST += $(TESTS_SH) check-has-hidden-symbols.c
-check_PROGRAMS += check-link
+check_PROGRAMS += check-link check-skiplist
 check_link_LDADD = libcairo.la
+
+check_skiplist_SOURCES = cairo-skiplist.c
+check_skiplist_CPPFLAGS = -DMAIN $(AM_CPPFLAGS)
 
 check: headers-standalone
 
