--- a/util/cairo-script/Makefile.am
+++ b/util/cairo-script/Makefile.am
@@ -1,4 +1,7 @@
 lib_LTLIBRARIES = libcairo-script-interpreter.la
+noinst_PROGRAMS = csi-replay
+
+AM_CPPFLAGS = -I$(top_srcdir)/src
 
 cairoincludedir=$(includedir)/cairo
 cairoinclude_HEADERS = cairo-script-interpreter.h
@@ -12,10 +15,12 @@ libcairo_script_interpreter_la_SOURCES = \
 	cairo-script-scanner.c \
 	cairo-script-stack.c \
 	$(NULL)
-libcairo_script_interpreter_la_CPPFLAGS = -I$(top_srcdir)/src
 libcairo_script_interpreter_la_CFLAGS = $(CAIRO_CFLAGS)
 libcairo_script_interpreter_la_LDFLAGS = -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
 libcairo_script_interpreter_la_LIBADD = -lz $(CAIRO_LIBS) -L$(top_builddir)/src -lcairo
+
+csi_replay_SOURCES = csi-replay.c
+csi_replay_LDADD = libcairo-script-interpreter.la $(top_builddir)/src/libcairo.la
 
 EXTRA_DIST = \
 	COPYING
