[twin] Reduce tolerance.
As the glyphs are rendered to cache, ensure that they are rendered at the
highest quality settings.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -971,6 +971,7 @@ REFERENCE_IMAGES = \
 	trap-clip.ps2.argb32.ref.png \
 	trap-clip.ps2.rgb24.ref.png \
 	twin.ref.png \
+	twin.pdf.ref.png \
 	twin.ps2.ref.png \
 	twin.ps3.ref.png \
 	twin.svg11.ref.png \
