[perf] Fix SDL compilation for MacOS X
The attached patch makes the SDL tests compile under Mac OS X.  The
problem is:

1) that <SDL_main.h> should be included in files that define the main
function for SDL Mac OS X programs (this is not true with the upcoming
SDL 1.3 release).

2) that -lSDLmain, because it is statically linked, needs the Cocoa
framework in the LDADD of the main program.  Again, 1.3 will not require
this.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -55,6 +55,10 @@ cairo_perf_SOURCES += cairo-perf-posix.c
 endif
 endif
 
+if CAIRO_HAS_SDL_SURFACE
+cairo_perf_LDADD = $(LDADD) $(sdl_LIBS)
+endif
+
 libcairoperf_la_SOURCES = \
 	cairo-perf-report.c	\
 	cairo-stats.c		\
