[test] Only delete output images beneath output.
We were using an overly-liberal find that also deleted copied output for
use in CAIRO_REF_DIR if that directory was below test/. So only delete
files below output/ (which should only be used by cairo-test).

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1251,14 +1251,13 @@ CLEANFILES +=					\
 # most systems cannot handle all of our clean files together.
 # Then it became a fancy find using many GNU extensions, but then the ugly
 # reality of portability was raised and it became....
-clean-local: clean-caches
+clean-local:
 	rm -rf output
-	-${FIND} . -name '*.out.*'    -print | ${XARGS} ${RM}
 	-${FIND} . -name '*.log'      -print | ${XARGS} ${RM}
 	-${FIND} . -name '*.[is]'     -print | ${XARGS} ${RM}
 clean-caches:
-	-${FIND} . -name '*.pass.*'   -print | ${XARGS} ${RM}
-	-${FIND} . -name '*.fail.*'   -print | ${XARGS} ${RM}
+	-${FIND} output -name '*.fail.*' -print | ${XARGS} ${RM}
+	-${FIND} output -name '*.pass.*' -print | ${XARGS} ${RM}
 
 # The following definitions both should work.
 #FAILED_TESTS = `grep -l '\<FAIL\>' $(test_sources:.c=.log) 2>/dev/null | sed -e 's/[.]log$$//' | xargs echo`
