[script] Add examples
Add some simple examples to demonstrate CairoScript, courtesy of M Joonas
Philaja.

--- a/configure.ac
+++ b/configure.ac
@@ -554,6 +554,7 @@ test/pdiff/Makefile
 perf/Makefile
 util/Makefile
 util/cairo-script/Makefile
+util/cairo-script/examples/Makefile
 util/cairo-trace/Makefile
 util/cairo-trace/cairo-trace
 doc/Makefile
