[test] Exercise glyph culling.
Sascha Steinbiss reported an issue with glyph culling,
http://lists.cairographics.org/archives/cairo/2008-December/015976.html,
whereby we failed to update the text clusters upon culling the glyphs in
the gstate and proceeded to read beyond the end of the glyph array in the
PDF backend. This test case setups a similar condition as reported, by
trying to write a wide string into a small box.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -37,6 +37,7 @@ test_sources = \
 	create-for-stream.c				\
 	create-from-png.c				\
 	create-from-png-stream.c			\
+	culled-glyphs.c					\
 	dash-caps-joins.c				\
 	dash-curve.c					\
 	dash-no-dash.c					\
@@ -406,6 +407,8 @@ REFERENCE_IMAGES = \
 	create-from-png.indexed.ref.png		\
 	create-from-png.indexed-alpha.ref.png	\
 	create-from-png-stream.ref.png	\
+	culled-glyphs.ref.png			\
+	culled-glyphs.ps.ref.png		\
 	dash-caps-joins.ps2.argb32.ref.png	\
 	dash-caps-joins.ps3.argb32.ref.png	\
 	dash-caps-joins.ps2.rgb24.ref.png	\
