Fix compilation with gcov
We need to add --coverage to LDFLAGS, so create CAIRO_LDFLAGS and use that
to populate AM_LDFLAGS.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST += Makefile.win32      Makefile.win32.features
 MAINTAINERCLEANFILES += $(srcdir)/Makefile.win32.features
 
 AM_CPPFLAGS = -I$(srcdir) $(CAIRO_CFLAGS)
+AM_LDFLAGS = $(CAIRO_LDFLAGS)
 
 if OS_WIN32
 export_symbols = -export-symbols cairo.def
@@ -29,7 +30,7 @@ libcairo_la_SOURCES = \
 	$(enabled_cairo_private) \
 	$(enabled_cairo_sources) \
 	$(NULL)
-libcairo_la_LDFLAGS = -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
+libcairo_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
 libcairo_la_LIBADD = $(CAIRO_LIBS)
 libcairo_la_DEPENDENCIES = $(cairo_def_dependency)
 
