[toy-font-face] Move toy font face code in a file of its own

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -141,6 +141,7 @@ cairo_sources = \
 	cairo-tor-scan-converter.c \
 	cairo-system.c \
 	cairo-traps.c \
+	cairo-toy-font-face.c \
 	cairo-unicode.c \
 	cairo-user-font.c \
 	cairo-version.c \
