[test] Stress test using large source images.
This test attempts to trigger failures in those backend clone_similar
methods that have size restrictions on the resulting image.  It also
triggers errors in scaling down large image surfaces as the image
backend also fails this test.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -94,6 +94,7 @@ test_sources = \
 	large-clip.c					\
 	large-font.c					\
 	large-source.c					\
+	large-source-roi.c				\
 	leaky-dash.c					\
 	leaky-dashed-rectangle.c			\
 	leaky-dashed-stroke.c				\
@@ -622,6 +623,7 @@ REFERENCE_IMAGES = \
 	large-clip.ref.png	\
 	large-font.ref.png	\
 	large-source.ref.png	\
+	large-source-roi.ref.png	\
 	leaky-dash.ps2.argb32.ref.png	\
 	leaky-dash.ps3.argb32.ref.png	\
 	leaky-dash.ps2.rgb24.ref.png	\
