Comment win32 maintainer-clean files again

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,10 +7,10 @@ EXTRA_DIST += \
 	build/Makefile.win32.features \
 	build/Makefile.win32.features-h \
 	$(NULL)
-MAINTAINERCLEANFILES += \
-	$(srcdir)/build/Makefile.win32.features \
-	$(srcdir)/build/Makefile.win32.features-h \
-	$(NULL)
+#MAINTAINERCLEANFILES += \
+#	$(srcdir)/build/Makefile.win32.features \
+#	$(srcdir)/build/Makefile.win32.features-h \
+#	$(NULL)
 
 ACLOCAL_AMFLAGS = -I build
 
