[util] Don't link backtrace-symbols into malloc-stats
On my rawhide machine, seems like the glibc backgrace-symbols is now as
good as our private backtrace-symbols.

--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -22,7 +22,7 @@ EXTRA_LTLIBRARIES += malloc-stats.la backtrace-symbols.la
 
 backtrace_symbols_la_LIBADD  = -lbfd -liberty
 
-malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD) backtrace-symbols.lo
+#malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD) backtrace-symbols.lo
 
 EXTRA_DIST += \
 	COPYING \
