--- a/util/cairo-trace/cairo-trace.in
+++ b/util/cairo-trace/cairo-trace.in
@@ -6,6 +6,7 @@ exec_prefix=@exec_prefix@
 nofile=
 flush=
 nocallers=
+nomarkdirty=
 
 usage() {
 cat << EOF
@@ -14,10 +15,11 @@ cairo-trace will generate a log of all calls made by command to
 cairo. This log will be stored in a file in the local directory
 called command.pid.trace.
 Whatever else happens is driven by its argument:
-  --flush      - Flush the output trace after every call.
-  --no-file    - Disable the creation of an output file. Outputs to the
-                 terminal instead.
-  --no-callers - Do not lookup the caller address/symbol/line whilst tracing.
+  --flush         - Flush the output trace after every call.
+  --no-file       - Disable the creation of an output file. Outputs to the
+                    terminal instead.
+  --no-callers    - Do not lookup the caller address/symbol/line whilst tracing.
+  --no-mark-dirty - Do not record image data for cairo_mark_dirty()
 
 Enviroment variables understood by cairo-trace:
   CAIRO_TRACE_FLUSH - flush the output after every function call.
@@ -41,6 +43,10 @@ while test $skip -eq 1; do
     --no-callers)
 	skip=1
 	nocallers=1
+	;;
+    --no-mark-dirty)
+	skip=1
+	nomarkdirty=1
 	;;
     --version)
 	echo "cairo-trace, version @CAIRO_VERSION_MAJOR@.@CAIRO_VERSION_MINOR@.@CAIRO_VERSION_MICRO@."
@@ -67,6 +73,11 @@ export LD_PRELOAD
 if test -n "$nocallers"; then
     CAIRO_TRACE_LINE_INFO=0
     export CAIRO_TRACE_LINE_INFO
+fi
+
+if test -n "$nomarkdirty"; then
+    CAIRO_TRACE_MARK_DIRTY=0
+    export CAIRO_TRACE_MARK_DIRTY
 fi
 
 if test -n "$flush"; then
